--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,7 +15,7 @@ const navItems = [
     <div class="flex justify-between items-center h-20">
       <!-- Logo -->
       <a href="/" class="flex items-center space-x-3">
-        <img src="/images/logo/mau-logo-horizontal.svg" alt="Masjid Al Ummah" class="h-12 w-auto" />
+        <img src="/images/logo/mau-animated-logo.gif" alt="Masjid Al Ummah" class="h-12 w-auto" />
       </a>
 
       <!-- Desktop Nav -->
