--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -67,7 +67,7 @@ const supportItems = [
 
         <div class="text-center">
           <a
-            href="https://www.launchgood.com/campaign/masjid_al_ummah_watford_phase_2#!/"
+            href="https://masjidalummah.org/donate"
             target="_blank"
             class="inline-block px-10 py-4 bg-primary text-white font-bold rounded-lg hover:bg-primary/90 transition-all shadow-lg hover:shadow-xl transform hover:-translate-y-1"
           >
@@ -159,7 +159,7 @@ const supportItems = [
         Don't miss the opportunity to be part of this Sadaqah Jariyah (ongoing charity) that will benefit generations to come.
       </p>
       <a
-        href="https://www.launchgood.com/campaign/masjid_al_ummah_watford_phase_2#!/"
+        href="https://masjidalummah.org/donate"
         target="_blank"
         class="inline-block px-12 py-5 bg-primary text-white font-bold text-lg rounded-xl hover:bg-primary/90 transition-all shadow-xl hover:shadow-2xl transform hover:-translate-y-1"
       >
