--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -77,7 +77,7 @@ const images = [
         <a href="/project" class="px-8 py-4 bg-transparent border-2 border-white text-white font-bold rounded-lg hover:bg-white/10 transition-all">
           Project Details
         </a>
-        <a href="https://www.launchgood.com/campaign/masjid_al_ummah_watford_phase_2#!/" target="_blank" class="px-8 py-4 bg-primary text-white font-bold rounded-lg hover:bg-primary-dark transition-all">
+        <a href="https://masjidalummah.org/donate" target="_blank" class="px-8 py-4 bg-primary text-white font-bold rounded-lg hover:bg-primary-dark transition-all">
           Donate to Phase 2
         </a>
       </div>
